<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.add.AddFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="20dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/addFirstName_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/et_FirstName_txt"/>

            <EditText
                android:id="@+id/addLastName_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:hint="@string/et_LastName_txt"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/addAge_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/et_Age_txt"/>

            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/add_btn_txt" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>