<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/id_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="1"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firstname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rv_item_first_name"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/lastname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/rv_item_last_name"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/age_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/rv_item_age"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>